index2 is responsive

--- a/index2.html
+++ b/index2.html
@@ -75,12 +75,12 @@
 					<h1>We Are?</h1>
 				</div>
 				<div class="row">
-					<div class="col-md-6">
+					<div class="col-md-6 col-xs-12">
 						<div>
 							<img src="images/image.png">
 						</div>
 					</div>
-					<div class="col-md-6">
+					<div class="col-md-6 col-xs-12">
 						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets.</p>
 						<button class="btn">READ MORE</button>
 					</div>
@@ -97,47 +97,47 @@
 					<h1>Services</h1>
 				</div>
 				<div class="col-md-12">
-					<div class="col-md-1">
+					<div class="col-md-1 col-xs-3">
 						<i class="fa fa-database" aria-hidden="true"></i>
 					</div>
-					<div class="col-md-3">
+					<div class="col-md-3 col-xs-9">
 						<h3>Data Entry</h3>
 						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.</p>
 					</div>
-					<div class="col-md-1">
+					<div class="col-md-1 col-xs-3">
 						<i class="fa fa-plane" aria-hidden="true"></i>
 					</div>
-					<div class="col-md-3">
+					<div class="col-md-3 col-xs-9">
 						<h3>Client Management</h3>
 						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.</p>
 					</div>
-					<div class="col-md-1">
+					<div class="col-md-1 col-xs-3">
 						<i class="fa fa-connectdevelop" aria-hidden="true"></i>
 					</div>
-					<div class="col-md-3">
+					<div class="col-md-3 col-xs-9">
 						<h3>Better Communication</h3>
 						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.</p>
 					</div>
 				</div>
 				<div class="col-md-12">
-					<div class="col-md-1">
+					<div class="col-md-1 col-xs-3">
 						<i class="fa fa-slideshare" aria-hidden="true"></i>
 					</div>
-					<div class="col-md-3">
+					<div class="col-md-3 col-xs-9">
 						<h3>Well analyzing team</h3>
 						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.</p>
 					</div>
-					<div class="col-md-1">
+					<div class="col-md-1 col-xs-3">
 						<i class="fa fa-life-ring" aria-hidden="true"></i>
 					</div>
-					<div class="col-md-3">
+					<div class="col-md-3 col-xs-9">
 						<h3>24 hour support</h3>
 						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.</p>
 					</div>
-					<div class="col-md-1">
+					<div class="col-md-1 col-xs-3">
 						<i class="fa fa-television" aria-hidden="true"></i>
 					</div>
-					<div class="col-md-3">
+					<div class="col-md-3 col-xs-9">
 						<h3>Keeping business data</h3>
 						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.</p>
 					</div>
