Portfolio and portfolio2 are responsive

--- a/portfolio.html
+++ b/portfolio.html
@@ -65,25 +65,25 @@
 				<div class="col-md-3" style="padding-left:0">
 					<div class="portfolioItem" style="height:261px;">
 						<div class="innerPortItem">
-							<h4>Project Title</h4>
+							<h4 style="padding-top:100px;">Project Title</h4>
 							<i class="fa fa-search"></i>
 						</div>
 					</div>
 					<div class="portfolioItem" style="height:261px;">
 						<div class="innerPortItem">
-							<h4>Project Title</h4>
+							<h4 style="padding-top:100px;">Project Title</h4>
 							<i class="fa fa-search"></i>
 						</div>
 					</div>
 					<div class="portfolioItem" style="height:261px;">
 						<div class="innerPortItem">
-							<h4>Project Title</h4>
+							<h4 style="padding-top:100px;">Project Title</h4>
 							<i class="fa fa-search"></i>
 						</div>
 					</div>
 					<div class="portfolioItem" style="height:211px;">
 						<div class="innerPortItem">
-							<h4>Project Title</h4>
+							<h4 style="padding-top:90px;">Project Title</h4>
 							<i class="fa fa-search"></i>
 						</div>
 					</div>
@@ -91,25 +91,25 @@
 				<div class="col-md-3">
 					<div class="portfolioItem" style="height:393px;">
 						<div class="innerPortItem">
-							<h4>Project Title</h4>
+							<h4 style="padding-top:180px;">Project Title</h4>
 							<i class="fa fa-search"></i>
 						</div>
 					</div>
 					<div class="portfolioItem" style="height:150px;">
 						<div class="innerPortItem">
-							<h4>Project Title</h4>
+							<h4 style="padding-top:45px;">Project Title</h4>
 							<i class="fa fa-search"></i>
 						</div>
 					</div>
 					<div class="portfolioItem" style="height:170px;">
 						<div class="innerPortItem">
-							<h4>Project Title</h4>
+							<h4 style="padding-top:55px;">Project Title</h4>
 							<i class="fa fa-search"></i>
 						</div>
 					</div>
 					<div class="portfolioItem" style="height:170px;">
 						<div class="innerPortItem">
-							<h4>Project Title</h4>
+							<h4 style="padding-top:55px;">Project Title</h4>
 							<i class="fa fa-search"></i>
 						</div>
 					</div>
@@ -117,19 +117,19 @@
 				<div class="col-md-3">
 					<div class="portfolioItem" style="height:193px;">
 						<div class="innerPortItem">
-							<h4>Project Title</h4>
+							<h4 style="padding-top:80px;">Project Title</h4>
 							<i class="fa fa-search"></i>
 						</div>
 					</div>
 					<div class="portfolioItem" style="height:393px;">
 						<div class="innerPortItem">
-							<h4>Project Title</h4>
+							<h4 style="padding-top:180px;">Project Title</h4>
 							<i class="fa fa-search"></i>
 						</div>
 					</div>
 					<div class="portfolioItem" style="height:393px;">
 						<div class="innerPortItem">
-							<h4>Project Title</h4>
+							<h4 style="padding-top:180px;">Project Title</h4>
 							<i class="fa fa-search"></i>
 						</div>
 					</div>
@@ -137,19 +137,19 @@
 				<div class="col-md-3" style="padding-right:0">
 					<div class="portfolioItem" style="height:327px;">
 						<div class="innerPortItem">
-							<h4>Project Title</h4>
+							<h4 style="padding-top:140px;">Project Title</h4>
 							<i class="fa fa-search"></i>
 						</div>
 					</div>
 					<div class="portfolioItem" style="height:327px;">
 						<div class="innerPortItem">
-							<h4>Project Title</h4>
+							<h4 style="padding-top:140px;">Project Title</h4>
 							<i class="fa fa-search"></i>
 						</div>
 					</div>
 					<div class="portfolioItem" style="height:367px;">
 						<div class="innerPortItem">
-							<h4>Project Title</h4>
+							<h4 style="padding-top:160px;">Project Title</h4>
 							<i class="fa fa-search"></i>
 						</div>
 					</div>
