Services and services2 are responsive(ALL)

--- a/services.html
+++ b/services.html
@@ -129,27 +129,27 @@
 		<div class="container-fluid">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-1">
+					<div class="col-md-1 col-xs-2">
 					<i class="fa fa-phone"></i>
 				</div>
-				<div class="col-md-2">
+				<div class="col-md-2 col-xs-10">
 					<p class="statNumber">10</p>
 					<p class="statText">Years in marketing</p>
 				</div>
-				<div class="col-md-1">
+				<div class="col-md-1 col-xs-2">
 					<i class="fa fa-users"></i>
 				</div>
-				<div class="col-md-2"><p class="statNumber">18</p>
+				<div class="col-md-2 col-xs-10"><p class="statNumber">18</p>
 					<p class="statText">Team members</p></div>
-				<div class="col-md-1">
+				<div class="col-md-1 col-xs-2">
 					<i class="fa fa-star-o"></i>
 				</div>
-				<div class="col-md-2"><p class="statNumber">900+</p>
+				<div class="col-md-2 col-xs-10"><p class="statNumber">900+</p>
 					<p class="statText">Finished projects</p></div>
-				<div class="col-md-1">
+				<div class="col-md-1 col-xs-2">
 					<i class="fa fa-trophy"></i>
 				</div>
-				<div class="col-md-2"><p class="statNumber">22</p>
+				<div class="col-md-2 col-xs-10"><p class="statNumber">22</p>
 					<p class="statText">Certification</p></div>
 				
 				</div>
