--- a/services2.html
+++ b/services2.html
@@ -64,50 +64,50 @@
 			</div>
 			<div class="col-md-4">
 				<div class="row serviceItem">
-					<div class="col-md-3">
+					<div class="col-md-3 col-xs-2">
 						<i class="fa fa-database fa-2x"></i>
 					</div>
-					<div class="col-md-9">
+					<div class="col-md-9 col-xs-10">
 						<h4>Data Entry</h4>
 					</div>
 				</div>
 				<div class="row serviceItem">
-					<div class="col-md-3">
+					<div class="col-md-3 col-xs-2">
 						<i class="fa fa-comment fa-2x"></i>
 					</div>
-					<div class="col-md-9">
+					<div class="col-md-9 col-xs-10">
 						<h4>Better Communication</h4>
 					</div>
 				</div>
 				<div class="row serviceItem">
-					<div class="col-md-3">
+					<div class="col-md-3 col-xs-2">
 						<i class="fa fa-users fa-2x"></i>
 					</div>
-					<div class="col-md-9">
+					<div class="col-md-9 col-xs-10">
 						<h4>Well Analyzing Team</h4>
 					</div>
 				</div>
 				<div class="row serviceItem">
-					<div class="col-md-3">
+					<div class="col-md-3 col-xs-2">
 						<i class="fa fa-phone fa-2x"></i>
 					</div>
-					<div class="col-md-9">
+					<div class="col-md-9 col-xs-10">
 						<h4>24 Hour Support</h4>
 					</div>
 				</div>
 				<div class="row serviceItem">
-					<div class="col-md-3">
+					<div class="col-md-3 col-xs-2">
 						<i class="fa fa-user fa-2x"></i>
 					</div>
-					<div class="col-md-9">
+					<div class="col-md-9 col-xs-10">
 						<h4>Client Management</h4>
 					</div>
 				</div>
 				<div class="row serviceItem">
-					<div class="col-md-3">
+					<div class="col-md-3 col-xs-2">
 						<i class="fa fa-database fa-2x"></i>
 					</div>
-					<div class="col-md-9">
+					<div class="col-md-9 col-xs-10">
 						<h4>Keeping Business Data</h4>
 					</div>
 				</div>
@@ -127,27 +127,27 @@
 		<div class="container-fluid">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-1">
+					<div class="col-md-1 col-xs-2">
 					<i class="fa fa-phone"></i>
 				</div>
-				<div class="col-md-2">
+				<div class="col-md-2 col-xs-10">
 					<p class="statNumber">10</p>
 					<p class="statText">Years in marketing</p>
 				</div>
-				<div class="col-md-1">
+				<div class="col-md-1 col-xs-2">
 					<i class="fa fa-users"></i>
 				</div>
-				<div class="col-md-2"><p class="statNumber">18</p>
+				<div class="col-md-2 col-xs-10"><p class="statNumber">18</p>
 					<p class="statText">Team members</p></div>
-				<div class="col-md-1">
+				<div class="col-md-1 col-xs-2">
 					<i class="fa fa-star-o"></i>
 				</div>
-				<div class="col-md-2"><p class="statNumber">900+</p>
+				<div class="col-md-2 col-xs-10"><p class="statNumber">900+</p>
 					<p class="statText">Finished projects</p></div>
-				<div class="col-md-1">
+				<div class="col-md-1 col-xs-2">
 					<i class="fa fa-trophy"></i>
 				</div>
-				<div class="col-md-2"><p class="statNumber">22</p>
+				<div class="col-md-2 col-xs-10"><p class="statNumber">22</p>
 					<p class="statText">Certification</p></div>
 				
 				</div>
